<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/descloc"
        android:layout_width="307dp"
        android:layout_height="80dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="108dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/desc_of_location"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/saveloc"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameloc"
        android:layout_width="232dp"
        android:layout_height="53dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="293dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_of_location"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/longlatt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="340dp"
        android:onClick="showMap"
        android:src="@drawable/ic_baseline_map_24"
        android:text="@string/showmap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/saveloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="340dp"
        android:src="@drawable/ic_baseline_save_24"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="24dp"
        android:onClick="viewLocations"
        android:text="@string/view"
        app:layout_constraintBottom_toTopOf="@+id/longlatt"
        app:layout_constraintEnd_toStartOf="@+id/showmap"
        app:layout_constraintStart_toEndOf="@+id/saveloc" />

    <Button
        android:id="@+id/longlatt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="268dp"
        android:onClick="viewLattLong"
        android:text="@string/longlat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveloc"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>